syntax = "proto3";

service ClioteSkyService {
    rpc Request(Token) returns (ClioteResponse);
    rpc Send(ClioteSend) returns (Empty);
    rpc Auth(AuthRequest) returns (Token);
}

message Empty {}
message Token {
    string token = 1;
}
message ClioteResponse {
    repeated bytes data = 1;
}
message ClioteSend {
    bytes data = 1;
    string recipient = 2;
}
message AuthRequest {
    string user = 1;
    string password = 2;
}